      driver for certain printers) function correctly.

   7) Alow Epson printers using Claria inks to select quadtone or
      hextone output.

   9) Corrected escputil status output for Epson Artisan and TX/SX
      7xx/8xx printer families and for a number of the R-series
      printers.

   10) Add support for EA5 envelope (paper size).

   11) Update the German translation.


* Changes from 5.2.3

   1) New printers supported in this release:

      Canon PIXMA iX4000
      Canon SELPHY CP-520
      EPSON Stylus Photo R2880
      EPSON Stylus DX4000

   2) Printing to the Epson PM-D600 has been corrected.

   3) Printing using the manual sheet guide on the Epson Stylus Photo
      R2400 has been corrected.

   4) Printing to the EPSON Artisan 700 and 800 and Stylus Photo
      P/TX700 and 800 series printers has been corrected.  Among other
      issues, it should now be possible to print reliably using the
      photo tray.

   5) The names of the following Epson printers have been corrected:

      EPSON Stylus Photo PX700W
      EPSON Stylus Photo TX700W
      EPSON Stylus Photo PX800FW
      EPSON Stylus Photo TX800FW

   6) The names of various Ricoh and Ricoh-based printers have been
      corrected to match Ricoh's model names and the OpenPrinting
      database.

   7) The EPSON inkjet utility, escputil, now correctly prints the
      color name for low ink warnings.

   8) Printing resolution names have been fixed in non-English locales
      in CUPS PPD files.

   9) A Russian translation has been added.  The Danish and Italian
      translations have been updated.

   10) Support has been added for L-size paper with tear-off borders.

   11) The ordering of inks in quadtone ink sets on Epson printers has
      been corrected.  In addition, support has been added for MIS
      quadtone and 6 tone inks.

   12) It is now possible to adjust the ink parameters for quadtone
      inks in CUPS.  Previously, these parameters could only be