@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 
 <!--
-   "$Id: printers.xml,v 1.45 2010/01/17 20:28:08 rlk Exp $"
+   "$Id: printers.xml,v 1.46 2010/02/12 01:02:12 rlk Exp $"
 
    XML description of printers known to libgutenprint
    You can add additional printers here, but the underlying driver has
@@ -964,8 +964,8 @@
       <printer translate="name" name="HP LaserJet 1220" deviceid="MFG:Hewlett-Packard;MDL:HP LaserJet 1220;DES:Hewlett-Packard LaserJet 1220;CMD:PJL,MLC,PCL,PCLXL,POSTSCRIPT;" driver="hp-lj_1220" manufacturer="HP" model="6" parameters="pcl_laser_params" />
       <printer translate="name" name="HP LaserJet 1300" deviceid="MFG:Hewlett-Packard;MDL:hp LaserJet 1300;DES:Hewlett-Packard LaserJet 1300;CMD:PJL,MLC,BIDI-ECP,PCL,POSTSCRIPT,PCLXL;" driver="hp-lj_1300" manufacturer="HP" model="6" parameters="pcl_laser_params" />
       <printer translate="name" name="HP LaserJet 1320" deviceid="MFG:Hewlett-Packard;MDL:hp LaserJet 1320 series;DES:Hewlett-Packard LaserJet 1320 series;CMD:PJL,MLC,BIDI-ECP,PCL,POSTSCRIPT,PCLXL;" driver="hp-lj_1320" manufacturer="HP" model="6" parameters="pcl_laser_params" />
-      <printer translate="name" name="HP LaserJet 2100" deviceid="MFG:Hewlett-Packard;MDL:HP LaserJet 2100 Series;DES:Hewlett-Packard LaserJet 2100 Series;CMD:PJL,MLC,PCL,PCLXL,POSTSCRIPT;" driver="hp-lj_2100" manufacturer="HP" model="6" parameters="pcl_laser_params" />
-      <printer translate="name" name="HP LaserJet 2100M" deviceid="MFG:Hewlett-Packard;MDL:HP LaserJet 2100 Series;DES:Hewlett-Packard LaserJet 2100 Series;CMD:PJL,MLC,PCL,PCLXL,POSTSCRIPT;" driver="hp-lj_2100m" manufacturer="HP" model="6" parameters="pcl_laser_params" />
+      <printer translate="name" name="HP LaserJet 2100" deviceid="MFG:Hewlett-Packard;MDL:HP LaserJet 2100 Series;DES:Hewlett-Packard LaserJet 2100 Series;CMD:PJL,MLC,PCL,PCLXL,POSTSCRIPT;" driver="hp-lj_2100" manufacturer="HP" model="62" parameters="pcl_laser_params" />
+      <printer translate="name" name="HP LaserJet 2100M" deviceid="MFG:Hewlett-Packard;MDL:HP LaserJet 2100 Series;DES:Hewlett-Packard LaserJet 2100 Series;CMD:PJL,MLC,PCL,PCLXL,POSTSCRIPT;" driver="hp-lj_2100m" manufacturer="HP" model="62" parameters="pcl_laser_params" />
       <printer translate="name" name="HP LaserJet 2200" deviceid="MFG:Hewlett-Packard;MDL:HP LaserJet 2200;DES:Hewlett-Packard LaserJet 2200;" driver="hp-lj_2200" manufacturer="HP" model="6" parameters="pcl_laser_params" />
       <printer translate="name" name="HP LaserJet 2300" deviceid="MFG:Hewlett-Packard;MDL:hp LaserJet 2300 series;DES:Hewlett-Packard LaserJet 2300 series;CMD:PJL,MLC,BIDI-ECP,PCLXL,PCL,PJL,POSTSCRIPT;" driver="hp-lj_2300" manufacturer="HP" model="6" parameters="pcl_laser_params" />
       <printer translate="name" name="HP LaserJet 2410" driver="hp-lj_2410" manufacturer="HP" model="6" parameters="pcl_laser_params" />
